# kubvernor-api-rs

./: Cargo.toml  update.sh
kubvernor-api/: Cargo.toml
kubvernor-api/src/: crds.rs
resources/: kubvernor_crds.yaml
