[workspace]
members = [ "kubvernor-api"]
resolver = "2"

[workspace.package]
authors = ["Dawid Nowak <nowakd@gmail.com>"]
edition = "2021"
license = "MIT"
version = "0.1.0"
readme = "./README.md"
repository = "https://github.com/kubvernor/kubvernor-api-rs"

[workspace.dependencies]
anyhow = "1.0.98"
delegate = "0.13.3"
hyper-util = "0.1.14"
kube = { version = "1.1.0" }
k8s-openapi = { version = "0.25.0" }
once_cell = "1.21.3"
regex = { package = "regex-lite", version = "0.1.6" }
schemars = "0.8.22"
serde_json = "1.0.140"
serde = { version = "1.0.219", features = ["derive"] }
serde_yaml = "0.9.34"
tokio = { version = "1.45.2", features = ["full"] }
tower = { version = "0.5.2", features = ["limit"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
uuid = { version = "1.17.0", features = ["v4", "fast-rng"] }


